# burner-list

./: Cargo.toml  LICENSE-MIT  README.md  burner-list-9f062f8104be2cec.js  burner-list-9f062f8104be2cec_bg.wasm  burner-list-a311c38b215a72e2.js  burner-list-a311c38b215a72e2_bg.wasm  burner-list-e77418b19994b9a4.js  burner-list-e77418b19994b9a4_bg.wasm  icons-13ac281b16e39ab6.css  icons.scss  index-32321c8f5036c380.css  index.html  index.scss
.github/workflows/: gh-pages.yml
src/: app.rs  button.rs  card.rs  data.rs  debug.rs  drag.rs  event.rs  list.rs  main.rs  prelude.rs  state.rs
src/button/: burn_button.rs  swap_button.rs
src/card/: add_card.rs  blank_card.rs  card.rs  drag_card.rs  util.rs
src/data/: database.rs  taskdata.rs  taskrank.rs
src/data/database/: impl_serde.rs
