[package]
name = "burner-list"
version = "0.1.0"
edition = "2021"
description = "burner list: simple task list"
readme = "README.md"
repository = "https://github.com/zenito9970/burner-list"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "serde" ] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.17"
wasm-logger = "0.2.0"
slab = "0.4.7"
yewdux = "0.8.1"
im = "15.1.0"
wasm-bindgen = "0.2.82"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
gloo = "0.8.0"
regex = "1.6.0"
lazy_static = "1.4.0"
itertools = "0.10.3"

[dependencies.web-sys]
version = "0.3.59"
features = [
    "DragEvent",
    "DataTransfer",
]
